--- a/booking/templates/booking/index.html
+++ b/booking/templates/booking/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="navbar navbar-inverse " role="navigation">
+<div class="navbar navbar-inverse navbar-light" role="navigation">
     <div class="container">
         {% if not request.user.is_authenticated %}
             <div class="navbar-header">
@@ -18,150 +18,18 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">Пользователь: {{ request.user }}</a>
             </div>
-            <div class="align-content-center">
-                <ul class="pull-right">
-                    <a class="navbar-header" href='{% url 'logout' %}'><button type="button" class="btn btn-danger btn-sm">Выход</button></a>
-                </ul>
+            <div class="align-content-centr">
+                {#                <ul class="pull-right">#}
+                <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#detailModalVacant">Отдохнуть</button>
+                <a class="navbar-header" href='{% url 'logout' %}'><button type="button" class="btn btn-danger btn-sm">Выход</button></a>
+
+                {#                </ul>#}
             </div>
         {% endif %}
     </div>
 </div>
 
 <div class="container">
-
-    {#    {% for object in booking %}#}
-    {#        {% for object in item %}#}
-    {#        <p>{{ object.title }}</p>#}
-    {#        {% for user in object.user.all %}#}
-    {#            <p>{{ user.username }}</p>#}
-    {#        {% endfor %}#}
-    {#        {% endfor %}#}
-    {#    {% endfor %}#}
-
-    {#       <table class="table table-bordered table-dark">#}
-    {##}
-    {#        <thead>#}
-    {#        <tr>#}
-    {#            <th scope="col">#</th>#}
-    {##}
-    {##}
-    {#            {% for object in booking_main %}#}
-    {#                <th scope="col">{{ object.title }}</th>#}
-    {#            {% endfor %}#}
-    {#        </tr>#}
-    {#        </thead>#}
-    {##}
-    {#        <tbody>#}
-    {#        <tr>#}
-    {##}
-    {#            <th scope="row">#}
-    {#                <dl>#}
-    {#                    <dd>C</dd>#}
-    {#                    <dd>О</dd>#}
-    {#                    <dd>Т</dd>#}
-    {#                    <dd>Р</dd>#}
-    {#                    <dd>У</dd>#}
-    {#                 <dd>Д</dd>#}
-    {#                    <dd>Н</dd>#}
-    {#                    <dd>И</dd>#}
-    {#                    <dd>К</dd>#}
-    {#                    <dd>И</dd>#}
-    {#                </dl>#}
-    {#            </th>#}
-    {##}
-    {##}
-    {##}
-    {#            {% for object in booking_main %}#}
-    {#                <td onclick="document.location='page/new.html'" scope="col">#}
-    {#                    <ol type="!">#}
-    {#                        {% for user in object.user.all %}#}
-    {#                            <li>{{ user.username }}</li>#}
-    {#                        {% endfor %}#}
-    {#                    </ol>#}
-    {#                </td>#}
-    {##}
-    {#            {% endfor %}#}
-    {#        </tr>#}
-    {#        <tr>#}
-    {#            <th scope="row">#</th>#}
-    {#            {% for object in booking_main %}#}
-    {##}
-    {#                <td scope="col">#}
-    {##}
-    {#                    <h6>Свободных мест: -</h6>#}
-    {#                    <p><a class="btn btn-success" href="#" role="button">Забронировать</a></p>#}
-    {#                </td>#}
-    {##}
-    {#            {% endfor %}#}
-    {#        </tr>#}
-    {##}
-    {##}
-    {#        </tbody>#}
-    {##}
-    {#    </table>#}
-    {##}
-    {##}
-    {#    <table class="table table-bordered table-dark">#}
-    {##}
-    {#        <thead>#}
-    {#        <tr>#}
-    {#            <th scope="col">#</th>#}
-    {##}
-    {##}
-    {#            {% for object in booking_second %}#}
-    {#                <th scope="col">{{ object.title }}</th>#}
-    {#            {% endfor %}#}
-    {#        </tr>#}
-    {#        </thead>#}
-    {##}
-    {#        <tbody>#}
-    {#        <tr>#}
-    {##}
-    {#            <th scope="row">#}
-    {#                <dl>#}
-    {#                    <dd>C</dd>#}
-    {#                    <dd>О</dd>#}
-    {#                    <dd>Т</dd>#}
-    {#                    <dd>Р</dd>#}
-    {#                    <dd>У</dd>#}
-    {#                    <dd>Д</dd>#}
-    {#                    <dd>Н</dd>#}
-    {#                    <dd>И</dd>#}
-    {#                    <dd>К</dd>#}
-    {#                    <dd>И</dd>#}
-    {#                </dl>#}
-    {#            </th>#}
-    {##}
-    {##}
-    {##}
-    {#            {% for object in booking_second %}#}
-    {#                <td onclick="document.location='page/new.html'" scope="col">#}
-    {#                    <ol type="!">#}
-    {#                        {% for user in object.user.all %}#}
-    {#                            <li>{{ user.username }}</li>#}
-    {#                        {% endfor %}#}
-    {#                    </ol>#}
-    {#                </td>#}
-    {##}
-    {#            {% endfor %}#}
-    {#        </tr>#}
-    {#        <tr>#}
-    {#            <th scope="row">#</th>#}
-    {#            {% for object in booking_second %}#}
-    {##}
-    {#                <td scope="col">#}
-    {##}
-    {#                    <h6>Свободных мест: -</h6>#}
-    {#                    <p><a class="btn btn-success" href="#" role="button">Забронировать</a></p>#}
-    {#                </td>#}
-    {##}
-    {#            {% endfor %}#}
-    {#        </tr>#}
-    {##}
-    {##}
-    {#        </tbody>#}
-    {##}
-    {#    </table>#}
 
     {% for week in weeks %}
         <table class="table table-bordered table-dark" width="100%">
@@ -193,19 +61,33 @@
                     </dl>
                 </th>
                 {% for object in week %}
-
-                    {#                    <td width="14%" onclick="document.location='page/new.html'" scope="col">#}
-                    <td width="14%" onclick="send('#detailModal1')" scope="col">
-                        <ol type="!">
+                    <td width="14%" scope="col">
+                        {% if object.user.all.count > 0 %}
+                            <h6 style="color:forestgreen">Офис:</h6>
+                        {% endif %}
+                        <div class="text-sm-right">
                             {% for staff in object.user.all %}
-                                <li>{{ staff.username }}</li>
-                                {#                                {% if user.is_authenticated %}#}
-                                {#                                   !!!!!!!!!!!#}
-                                {#                                {% endif %}#}
+                                <p>{{ staff.username }}</p>
                             {% endfor %}
-                        </ol>
+                        </div>
+                        {% if object.home.all.count > 0 %}
+                            <h6 style="color:mediumvioletred">Home Office:</h6>
+                        {% endif %}
+                        <div class="text-sm-right">
+                            {% for staff in object.home.all %}
+                                <p>{{ staff.username }}</p>
+                            {% endfor %}
+                        </div>
+                        {% if object.vacant.all.count > 0 %}
+                            <h6 style="color:yellow">Отдых:</h6>
+                        {% endif %}
+                        <div class="text-sm-right">
+                            {% for staff in object.vacant.all %}
+                                <p>{{ staff.username }}</p>
+                            {% endfor %}
+                        </div>
                     </td>
-
+                    {#                        </ol>#}
                 {% endfor %}
             </tr>
             <tr>
@@ -215,11 +97,13 @@
                     {#                    <td width="14%" scope="col"> #}
 
                     <td width="14%" scope="col">
-                        {% if object.user.all.count < 14 and not user in object.user.all %}
+                        {% if today > object.day  %}
+                            <p><a class="btn btn-warning btn-block disabled" href="#" role="button">Закрыто</a></p>
+                        {% elif object.user.all.count < 19 and not user in object.user.all %}
                             <p><a class="btn btn-success btn-block" href="{% url 'reserve' str_date=object.day %}" role="button">Записаться</a></p>
                         {% elif user in object.user.all %}
                             <p><a class="btn btn-danger btn-block" href="{% url 'unreserve' str_date=object.day %}" role="button">Отменить</a></p>
-                        {% elif object.user.all.count == 14 %}
+                        {% elif object.user.all.count == 19 %}
                             <p><a class="btn btn-warning btn-block disabled" href="#" role="button">Зарезервировано</a></p>
                         {% endif %}
                     </td>
@@ -249,55 +133,84 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <table class="table table-striped">
+                        <table class="table table-striped small">
                             <thead>
                             <tr>
-                                {#                                <th scope="col"></th>#}
-                                {#                                <th scope="col">Сотрудник</th>#}
                             </tr>
                             </thead>
                             <tbody>
-                            {% for user in object.user.all %}
-                                <tr>
-                                    <th scope="row"></th>
-                                    <td><h6>{{ user.username }}</h6></td>
-                                </tr>
-                            {% endfor %}
+                            {% if object.user.all.count > 0 %}
+                                <h6 style="color:forestgreen">Офис:</h6>
+                            {% endif %}
+                            <div class="text-sm-right">
+                                {% for staff in object.user.all %}
+                                    <p>{{ staff.username }}</p>
+                                {% endfor %}
+                            </div>
+                            {% if object.home.all.count > 0 %}
+                                <h6 style="color:mediumvioletred">Home Office:</h6>
+                            {% endif %}
+                            <div class="text-sm-right">
+                                {% for staff in object.home.all %}
+                                    <p>{{ staff.username }}</p>
+                                {% endfor %}
+                            </div>
+                            {% if object.vacant.all.count > 0 %}
+                                <h6 style="color:yellow">Отдых:</h6>
+                            {% endif %}
+                            <div class="text-sm-right">
+                                {% for staff in object.vacant.all %}
+                                    <p>{{ staff.username }}</p>
+                                {% endfor %}
+                            </div>
                             </tbody>
-                            <tfoot>
-                            {#                            <tr>#}
-                            {#                                <th></th>#}
-                            {#                                <th>Всего: {{ object.user.all.count }}</th>#}
-                            {#                                <th></th>#}
-                            {#                                <th class="text" id="cart-total-price"><h4>{{ object.user.all.count }}</h4></th>#}
-                            {#                                <th></th>#}
-                            {#                            </tr>#}
-                            </tfoot>
+                            <tfoot></tfoot>
                         </table>
 
-                        <p><h6>Свободных мест: {{ object.free_places }}</h6></p>
+                        <p><h6>Свободных мест:
+                        {% if object.free_places <= 0 %}
+                            нет
+                        {% else %}
+                            {{ object.free_places }}
+                        {% endif %}
+                        , в офисе будет {{ object.user.all.count }} человек.</h6></p>
                         <p><h6>Дежурные: </h6></p>
                         <ul style='list-style-type:square;'>
                             <li>Администратор: -</li>
                             <li>Аналитик: -</li>
                             <li>Робот: -</li>
-                            <li>Программист: -</li>
                             <li>Менеджер: -</li>
+                            {% for admin in duty_admin %}
+                                {% if admin.day == object.day.weekday %}
+                                    <li>Программист: {{ admin.administrator }}</li>
+                                    {% if admin.administrator not in object.user.all %}
+                                        <h6 style="color:red">Дежурный программист не записан!</h6>
+                                    {% endif %}
+                                {% else %}
+                                    {#                                    <li>Программист: -</li>#}
+                                {% endif %}
+                            {% endfor %}
                         </ul>
                     </div>
                     <div class="modal-footer">
                         <div class = "row">
-                        {% if object.user.all.count < 14 and not user in object.user.all %}
-                            <p><a class="btn btn-success btn-block" href="{% url 'reserve' str_date=object.day %}" role="button">Записаться</a></p>
-                        {% elif user in object.user.all %}
-                            <p><a class="btn btn-danger btn-block" href="{% url 'unreserve' str_date=object.day %}" role="button">Отменить</a></p>
-                        {% elif object.user.all.count == 14 %}
-                            <p><a class="btn btn-warning btn-block disabled" href="#" role="button">Зарезервировано</a></p>
-                        {% endif %}
-                        <ul class="pull-right">
-                        <p><a class="btn btn-secondary" data-dismiss="modal" role="button">Закрыть</a></p>
-                        </ul>
-                    </div>
+                            {% if today > object.day  %}
+                                <p><a class="btn btn-warning btn-block disabled" href="#" role="button">Закрыто</a></p>
+                            {% elif object.user.all.count < 19 and not user in object.user.all %}
+                                <p><a class="btn btn-success btn-block" href="{% url 'reserve' str_date=object.day %}" role="button">Записаться</a></p>
+                            {% elif user in object.user.all %}
+                                <p><a class="btn btn-danger btn-block" href="{% url 'unreserve' str_date=object.day %}" role="button">Отменить</a></p>
+                            {% elif object.user.all.count == 19 %}
+                                <p><a class="btn btn-warning btn-block disabled" href="#" role="button">Зарезервировано</a></p>
+                            {% endif %}
+                            <ul class="pull-right">
+                                <p><a class="btn btn-warning btn-block" href="{% url 'vacant' str_date=object.day %}" role="button">Отдохнуть</a></p>
+                            </ul>
+                            <ul class="pull-right">
+                                <p><a class="btn btn-secondary" data-dismiss="modal" role="button">Закрыть</a></p>
+                            </ul>
+
+                        </div>
                     </div>
                 </div>
             </div>
@@ -305,8 +218,34 @@
     {% endfor %}
 {% endfor %}
 
+<div class="modal fade" id="detailModalVacant" tabindex="-1" role="dialog" aria-labelledby="detailModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title" id="detailModalLabel">Задайте период отсутсвия:</h3>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>
+                    <label for="calendarnav_start">Первый день:</label>
+                    <input type="date" id="calendarnav_start">
+                </p>
+                <p>
+                    <label for="calendarnav">Последний день:</label>
+                    <input type="date" id="calendarnav">
+                </p>
+                <p><a class="btn btn-success btn-block" href="#" role="button">Отдых</a></p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="http://code.jquery.com/jquery-latest.js" ></script>
-{#<script src="http://code.jquery.com/jquery-3.4.1.min.js"></script>#}
 
 <script src="{% static 'js/bootstrap.min.js'%}"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
